tests/types/errors/null_widening_int.mochi
// MEP-10 A2: `null` is `option[any]` and does not flow into a non-option
// slot like `int`. Use `int?` if you need a nullable integer.
let x: int = null
